--- a/MapGenerator/nbproject/project.properties
+++ b/MapGenerator/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MapGenerator
-main.class=mapgenerator.MapGenerator
+main.class=mapgenerator.MainHandler
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
